k8s/addons/kyverno/enforce-pod-label.yml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-team-label
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ['']
        apiVersions: ['v1']
        operations: ['CREATE', 'UPDATE']
        resources: ['pods']
  validations:
    - expression: >-
        has(object.metadata.labels) && has(object.metadata.labels.team) && object.metadata.labels.team != ''
      message: "Pod must have a 'team' label."
