k8s/addons/kyverno/restrict-image-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag-policy
  namespace: wsi
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-latest-tag
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Using 'latest' tag for images is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:*latest"  # ! == not
